# OS

./: .gitignore  README.md  计工学院操作系统课程设计模板2025.doc
backend/: app.py  config.py  pyproject.toml
backend/core/: buffer.py  disk.py  filesystem.py  process.py  scheduler.py
docs/: 202313156-邓逸飞.docx  2023xxxxx-tdb.docx  AI绘图提示词.md  功能验证清单.md  可视化界面详解.md  报告模板.md  测试报告-缓冲与前端.docx  演示指南.md  演示说明.md  用户手册.docx  用户手册.md  计工学院操作系统课程设计模板2025.doc  课设报告_完整版.md  题目.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Modal.tsx  Sidebar.tsx  Toast.tsx  TopBar.tsx
frontend/src/components/panels/: BufferPanel.tsx  Dashboard.tsx  DiskPanel.tsx  FilesPanel.tsx  IPCPanel.tsx  ProcessPanel.tsx  SchedulerPanel.tsx  TerminalPanel.tsx
frontend/src/services/: api.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
os_filesystem/: README.md  app.py  requirements.txt  课程设计报告.md
os_filesystem/core/: __init__.py  buffer.py  filesystem.py  ipc.py  scheduler.py
os_filesystem/static/: app.js  index.html
