[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eventlet==0.33.3",
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "flask-socketio==5.3.6",
    "multiprocess==0.70.15",
    "numpy==1.26.2",
    "python-socketio==5.10.0",
]
